data/forge_javadoc/1.12.2/processed/net_minecraft_network_PacketBuffer.md
# PacketBuffer

**Inheritance:** java.lang.Object → ByteBuf → net.minecraft.network.PacketBuffer

## Class signature

```java
public class PacketBuffer extends ByteBuf
```

## Constructors

- `PacketBuffer(ByteBuf wrapped)`

## Methods

- `ByteBufAllocator alloc()`
- `byte[] array()`
- `int arrayOffset()`
- `ByteBuf asReadOnly()`
- `int bytesBefore(byte p_bytesBefore_1_)`
- `int bytesBefore(int p_bytesBefore_1_, byte p_bytesBefore_2_)`
- `int bytesBefore(int p_bytesBefore_1_, int p_bytesBefore_2_, byte p_bytesBefore_3_)`
- `int capacity()`
- `ByteBuf capacity(int p_capacity_1_)`
- `ByteBuf clear()`
- `int compareTo(ByteBuf p_compareTo_1_)`
- `ByteBuf copy()`
- `ByteBuf copy(int p_copy_1_, int p_copy_2_)`
- `ByteBuf discardReadBytes()`
- `ByteBuf discardSomeReadBytes()`
- `ByteBuf duplicate()`
- `ByteBuf ensureWritable(int p_ensureWritable_1_)`
- `int ensureWritable(int p_ensureWritable_1_, boolean p_ensureWritable_2_)`
- `boolean equals(java.lang.Object p_equals_1_)`
- `int forEachByte(ByteProcessor p_forEachByte_1_)`
- `int forEachByte(int p_forEachByte_1_, int p_forEachByte_2_, ByteProcessor p_forEachByte_3_)`
- `int forEachByteDesc(ByteProcessor p_forEachByteDesc_1_)`
- `int forEachByteDesc(int p_forEachByteDesc_1_, int p_forEachByteDesc_2_, ByteProcessor p_forEachByteDesc_3_)`
- `boolean getBoolean(int p_getBoolean_1_)`
- `byte getByte(int p_getByte_1_)`
- `ByteBuf getBytes(int p_getBytes_1_, byte[] p_getBytes_2_)`
- `ByteBuf getBytes(int p_getBytes_1_, byte[] p_getBytes_2_, int p_getBytes_3_, int p_getBytes_4_)`
- `ByteBuf getBytes(int p_getBytes_1_, ByteBuf p_getBytes_2_)`
- `ByteBuf getBytes(int p_getBytes_1_, java.nio.ByteBuffer p_getBytes_2_)`
- `ByteBuf getBytes(int p_getBytes_1_, ByteBuf p_getBytes_2_, int p_getBytes_3_)`
- `ByteBuf getBytes(int p_getBytes_1_, ByteBuf p_getBytes_2_, int p_getBytes_3_, int p_getBytes_4_)`
- `int getBytes(int p_getBytes_1_, java.nio.channels.FileChannel p_getBytes_2_, long p_getBytes_3_, int p_getBytes_5_)`
- `ByteBuf getBytes(int p_getBytes_1_, java.io.OutputStream p_getBytes_2_, int p_getBytes_3_)`
- `char getChar(int p_getChar_1_)`
- `java.lang.CharSequence getCharSequence(int p_getCharSequence_1_, int p_getCharSequence_2_, java.nio.charset.Charset p_getCharSequence_3_)`
- `double getDouble(int p_getDouble_1_)`
- `float getFloat(int p_getFloat_1_)`
- `int getInt(int p_getInt_1_)`
- `int getIntLE(int p_getIntLE_1_)`
- `long getLong(int p_getLong_1_)`
- `long getLongLE(int p_getLongLE_1_)`
- `int getMedium(int p_getMedium_1_)`
- `int getMediumLE(int p_getMediumLE_1_)`
- `short getShort(int p_getShort_1_)`
- `short getShortLE(int p_getShortLE_1_)`
- `short getUnsignedByte(int p_getUnsignedByte_1_)`
- `long getUnsignedInt(int p_getUnsignedInt_1_)`
- `long getUnsignedIntLE(int p_getUnsignedIntLE_1_)`
- `int getUnsignedMedium(int p_getUnsignedMedium_1_)`
- `int getUnsignedMediumLE(int p_getUnsignedMediumLE_1_)`
- `int getUnsignedShort(int p_getUnsignedShort_1_)`
- `int getUnsignedShortLE(int p_getUnsignedShortLE_1_)`
- `static int getVarIntSize(int input)`
- `boolean hasArray()`
- `int hashCode()`
- `boolean hasMemoryAddress()`
- `int indexOf(int p_indexOf_1_, int p_indexOf_2_, byte p_indexOf_3_)`
- `java.nio.ByteBuffer internalNioBuffer(int p_internalNioBuffer_1_, int p_internalNioBuffer_2_)`
- `boolean isDirect()`
- `boolean isReadable()`
- `boolean isReadable(int p_isReadable_1_)`
- `boolean isReadOnly()`
- `boolean isWritable()`
- `boolean isWritable(int p_isWritable_1_)`
- `ByteBuf markReaderIndex()`
- `ByteBuf markWriterIndex()`
- `int maxCapacity()`
- `int maxWritableBytes()`
- `long memoryAddress()`
- `java.nio.ByteBuffer nioBuffer()`
- `java.nio.ByteBuffer nioBuffer(int p_nioBuffer_1_, int p_nioBuffer_2_)`
- `int nioBufferCount()`
- `java.nio.ByteBuffer[] nioBuffers()`
- `java.nio.ByteBuffer[] nioBuffers(int p_nioBuffers_1_, int p_nioBuffers_2_)`
- `java.nio.ByteOrder order()`
- `ByteBuf order(java.nio.ByteOrder p_order_1_)`
- `int readableBytes()`
- `BlockPos readBlockPos()`
- `boolean readBoolean()`
- `byte readByte()`
- `byte[] readByteArray()`
- `byte[] readByteArray(int maxLength)`
- `ByteBuf readBytes(byte[] p_readBytes_1_)`
- `ByteBuf readBytes(byte[] p_readBytes_1_, int p_readBytes_2_, int p_readBytes_3_)`
- `ByteBuf readBytes(ByteBuf p_readBytes_1_)`
- `ByteBuf readBytes(java.nio.ByteBuffer p_readBytes_1_)`
- `ByteBuf readBytes(ByteBuf p_readBytes_1_, int p_readBytes_2_)`
- `ByteBuf readBytes(ByteBuf p_readBytes_1_, int p_readBytes_2_, int p_readBytes_3_)`
- `int readBytes(java.nio.channels.FileChannel p_readBytes_1_, long p_readBytes_2_, int p_readBytes_4_)`
- `ByteBuf readBytes(int p_readBytes_1_)`
- `ByteBuf readBytes(java.io.OutputStream p_readBytes_1_, int p_readBytes_2_)`
- `char readChar()`
- `java.lang.CharSequence readCharSequence(int p_readCharSequence_1_, java.nio.charset.Charset p_readCharSequence_2_)`
- `NBTTagCompound readCompoundTag()`
- `double readDouble()`
- `<T extends java.lang.Enum<T>> T readEnumValue(java.lang.Class<T> enumClass)`
- `int readerIndex()`
- `ByteBuf readerIndex(int p_readerIndex_1_)`
- `float readFloat()`
- `int readInt()`
- `int readIntLE()`
- `ItemStack readItemStack()`
- `long readLong()`
- `long[] readLongArray(long[] array)`
- `long[] readLongArray(long[] array, int maxLength)`
- `long readLongLE()`
- `int readMedium()`
- `int readMediumLE()`
- `ResourceLocation readResourceLocation()`
- `ByteBuf readRetainedSlice(int p_readRetainedSlice_1_)`
- `short readShort()`
- `short readShortLE()`
- `ByteBuf readSlice(int p_readSlice_1_)`
- `java.lang.String readString(int maxLength)`
- `ITextComponent readTextComponent()`
- `java.util.Date readTime()`
- `java.util.UUID readUniqueId()`
- `short readUnsignedByte()`
- `long readUnsignedInt()`
- `long readUnsignedIntLE()`
- `int readUnsignedMedium()`
- `int readUnsignedMediumLE()`
- `int readUnsignedShort()`
- `int readUnsignedShortLE()`
- `int readVarInt()`
- `int[] readVarIntArray()`
- `int[] readVarIntArray(int maxLength)`
- `long readVarLong()`
- `int refCnt()`
- `boolean release()`
- `boolean release(int p_release_1_)`
- `ByteBuf resetReaderIndex()`
- `ByteBuf resetWriterIndex()`
- `ByteBuf retain()`
- `ByteBuf retain(int p_retain_1_)`
- `ByteBuf retainedDuplicate()`
- `ByteBuf retainedSlice()`
- `ByteBuf retainedSlice(int p_retainedSlice_1_, int p_retainedSlice_2_)`
- `ByteBuf setBoolean(int p_setBoolean_1_, boolean p_setBoolean_2_)`
- `ByteBuf setByte(int p_setByte_1_, int p_setByte_2_)`
- `ByteBuf setBytes(int p_setBytes_1_, byte[] p_setBytes_2_)`
- `ByteBuf setBytes(int p_setBytes_1_, byte[] p_setBytes_2_, int p_setBytes_3_, int p_setBytes_4_)`
- `ByteBuf setBytes(int p_setBytes_1_, ByteBuf p_setBytes_2_)`
- `ByteBuf setBytes(int p_setBytes_1_, java.nio.ByteBuffer p_setBytes_2_)`
- `ByteBuf setBytes(int p_setBytes_1_, ByteBuf p_setBytes_2_, int p_setBytes_3_)`
- `ByteBuf setBytes(int p_setBytes_1_, ByteBuf p_setBytes_2_, int p_setBytes_3_, int p_setBytes_4_)`
- `int setBytes(int p_setBytes_1_, java.nio.channels.FileChannel p_setBytes_2_, long p_setBytes_3_, int p_setBytes_5_)`
- `ByteBuf setChar(int p_setChar_1_, int p_setChar_2_)`
- `int setCharSequence(int p_setCharSequence_1_, java.lang.CharSequence p_setCharSequence_2_, java.nio.charset.Charset p_setCharSequence_3_)`
- `ByteBuf setDouble(int p_setDouble_1_, double p_setDouble_2_)`
- `ByteBuf setFloat(int p_setFloat_1_, float p_setFloat_2_)`
- `ByteBuf setIndex(int p_setIndex_1_, int p_setIndex_2_)`
- `ByteBuf setInt(int p_setInt_1_, int p_setInt_2_)`
- `ByteBuf setIntLE(int p_setIntLE_1_, int p_setIntLE_2_)`
- `ByteBuf setLong(int p_setLong_1_, long p_setLong_2_)`
- `ByteBuf setLongLE(int p_setLongLE_1_, long p_setLongLE_2_)`
- `ByteBuf setMedium(int p_setMedium_1_, int p_setMedium_2_)`
- `ByteBuf setMediumLE(int p_setMediumLE_1_, int p_setMediumLE_2_)`
- `ByteBuf setShort(int p_setShort_1_, int p_setShort_2_)`
- `ByteBuf setShortLE(int p_setShortLE_1_, int p_setShortLE_2_)`
- `ByteBuf setZero(int p_setZero_1_, int p_setZero_2_)`
- `ByteBuf skipBytes(int p_skipBytes_1_)`
- `ByteBuf slice()`
- `ByteBuf slice(int p_slice_1_, int p_slice_2_)`
- `java.lang.String toString()`
- `java.lang.String toString(java.nio.charset.Charset p_toString_1_)`
- `java.lang.String toString(int p_toString_1_, int p_toString_2_, java.nio.charset.Charset p_toString_3_)`
- `ByteBuf touch()`
- `ByteBuf touch(java.lang.Object p_touch_1_)`
- `ByteBuf unwrap()`
- `int writableBytes()`
- `PacketBuffer writeBlockPos(BlockPos pos)`
- `ByteBuf writeBoolean(boolean p_writeBoolean_1_)`
- `ByteBuf writeByte(int p_writeByte_1_)`
- `PacketBuffer writeByteArray(byte[] array)`
- `ByteBuf writeBytes(byte[] p_writeBytes_1_)`
- `ByteBuf writeBytes(byte[] p_writeBytes_1_, int p_writeBytes_2_, int p_writeBytes_3_)`
- `ByteBuf writeBytes(ByteBuf p_writeBytes_1_)`
- `ByteBuf writeBytes(java.nio.ByteBuffer p_writeBytes_1_)`
- `ByteBuf writeBytes(ByteBuf p_writeBytes_1_, int p_writeBytes_2_)`
- `ByteBuf writeBytes(ByteBuf p_writeBytes_1_, int p_writeBytes_2_, int p_writeBytes_3_)`
- `int writeBytes(java.nio.channels.FileChannel p_writeBytes_1_, long p_writeBytes_2_, int p_writeBytes_4_)`
- `ByteBuf writeChar(int p_writeChar_1_)`
- `int writeCharSequence(java.lang.CharSequence p_writeCharSequence_1_, java.nio.charset.Charset p_writeCharSequence_2_)`
- `PacketBuffer writeCompoundTag(NBTTagCompound nbt)`
- `ByteBuf writeDouble(double p_writeDouble_1_)`
- `PacketBuffer writeEnumValue(java.lang.Enum<?> value)`
- `ByteBuf writeFloat(float p_writeFloat_1_)`
- `ByteBuf writeInt(int p_writeInt_1_)`
- `ByteBuf writeIntLE(int p_writeIntLE_1_)`
- `PacketBuffer writeItemStack(ItemStack stack)`
- `ByteBuf writeLong(long p_writeLong_1_)`
- `PacketBuffer writeLongArray(long[] array)`
- `ByteBuf writeLongLE(long p_writeLongLE_1_)`
- `ByteBuf writeMedium(int p_writeMedium_1_)`
- `ByteBuf writeMediumLE(int p_writeMediumLE_1_)`
- `PacketBuffer writeResourceLocation(ResourceLocation resourceLocationIn)`
- `int writerIndex()`
- `ByteBuf writerIndex(int p_writerIndex_1_)`
- `ByteBuf writeShort(int p_writeShort_1_)`
- `ByteBuf writeShortLE(int p_writeShortLE_1_)`
- `PacketBuffer writeString(java.lang.String string)`
- `PacketBuffer writeTextComponent(ITextComponent component)`
- `PacketBuffer writeTime(java.util.Date time)`
- `PacketBuffer writeUniqueId(java.util.UUID uuid)`
- `PacketBuffer writeVarInt(int input)`
- `PacketBuffer writeVarIntArray(int[] array)`
- `PacketBuffer writeVarLong(long value)`
- `ByteBuf writeZero(int p_writeZero_1_)`